[package]
name = "ppm"
version = "0.1.0"
authors = ["Joris Demandre <joris.demandre@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.0"
libc = "0.2"
itertools = "0.8"
dict_derive = "0.2.0"

[build-dependencies]
cc = "1.0"

[lib]
name = "ppm"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]
